--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,88 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* Utils */
+
+:root{
+    --orange: rgb(255,105,0);
+    --darkgrey: rgb(26,26,26);
+}
+
+.flex {
+    display: flex;
+}
+
+.gap-10{
+    gap: 10px;
+}
+
+.debug{
+    border: 1px dashed black;
+}
+/* Generics */
+
+body{
+    padding: 90px;
+    font-family: sans-serif;
+}
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+ul{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+/* Header */
+
+header{
+    height: 80px;
+    background-color: var(--orange);
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 0 10px var(--darkgrey);
+    z-index: 2;
+}
+
+header nav{
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.center-nav{
+    flex-basis: 50% ;
+    text-align: center;
+}
+
+.side-nav{
+    flex-basis: 25%;
+}
+
+.side-nav.right{
+    justify-content: flex-end;
+}
+
+nav a{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.logo{
+    width: 150px;
+}
+
+.side-nav.left li:hover{
+    text-decoration: underline;
+}
