--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,11 @@
 .debug{
     border: 1px dashed black;
 }
+
 /* Generics */
 
 body{
-    padding: 130px;
+    padding-top: 130px;
     font-family: sans-serif;
 }
 
@@ -46,18 +47,18 @@ ul{
 
 a{
     text-decoration: none;
-}
-
-h2{
-    font-size: 20px;
-    margin-bottom: 1px;
-    text-transform: uppercase;
+    color: white;
 }
 
 h3{
     font-size: 14px;
     font-weight: normal;
     margin-bottom: 1px;
+}
+
+h4{
+    font-size: 14px;
+    margin-bottom: 10px;
 }
 
 /* Header */
@@ -94,7 +95,6 @@ header nav{
 }
 
 nav a{
-    color: white;
     font-size: 20px;
     font-weight: bold;
 }
@@ -116,6 +116,12 @@ nav a{
 .col{
     flex-basis: calc(100%/3);
     min-height: 50px;
+}
+
+.col h2{
+    font-size: 20px;
+    margin-bottom: 1px;
+    text-transform: uppercase;
 }
 
 .card{
@@ -189,4 +195,35 @@ nav a{
 
 .favourites:hover{
     color: red;
+}
+
+/* Footer */
+
+footer{
+    height: 100px;
+    background-color: var(--darkgrey);
+    color: white;
+}
+
+footer .container{
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+footer h2{
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.footer-left a{
+    font-size: 14px;
+}
+
+.footer-left a:hover{
+    text-decoration: underline;
+}
+
+.footer-right a{
+    font-size: 18px;
 }
